--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,12 @@
-numpy
-cv2
-matplotlib
-sklearn
+cycler==0.10.0
+joblib==0.14.1
+kiwisolver==1.1.0
+matplotlib==3.2.0
+numpy==1.18.1
+opencv-python==4.2.0.32
+pyparsing==2.4.6
+python-dateutil==2.8.1
+scikit-learn==0.22.2.post1
+scipy==1.4.1
+six==1.14.0
+sklearn==0.0
